--- a/src/main/resources/templates/fragments/fragment-entete.html
+++ b/src/main/resources/templates/fragments/fragment-entete.html
@@ -1,6 +1,6 @@
 <nav th:fragment="entete">
-	<a th:href="/" >Accueil</a>
-	<a th:href="/enchere">Liste des enchères</a>
+	<a th:href="@{/}" >Accueil</a>
+	<a th:href="@{/enchere}">Liste des enchères</a>
 	
 	
 </nav>
