mise en place du deroulement html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<!--une condition pour se connecter permettant d'avoir acces
+	 a plus de fonction et affichant mes vente en cours></!-->
+	
 <title>ENI Enchere</title>
 </head>
 <body>
 	<h1>Liste des enchères</h1>
 	<div th:replace="~{fragments/fragment-entete::entete}"></div>
-
 	
 
 </body>
