--- a/src/main/resources/templates/mon-profil-detail.html
+++ b/src/main/resources/templates/mon-profil-detail.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<!--seras afficher uand l'utilisateur cliquera sur mon profil 
+et renverras vers la page monprofil.html si on clique sur modifier></!-->
+
 <title>Insert title here</title>
 </head>
 <body>
