--- a/src/main/resources/templates/mon-profil.html
+++ b/src/main/resources/templates/mon-profil.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<!--affiche la creation du profil et 
+afficheras la page pour modifier le profil une fois connecter
+remplace les bouton creer/annuler 
+par enregistrer/supprimer mon compte></!-->
+
 <title>Insert title here</title>
 </head>
 <body>
