--- a/src/main/resources/templates/vendre-article.html
+++ b/src/main/resources/templates/vendre-article.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<!--affichage de la vue pour permettre de creer un produit 
+n'est accessible que par un utilisateur
+une fois enregistrer si l'utilisateur
+ reviens dessus il peut la modifier></!-->
 <title>Insert title here</title>
 </head>
 <body>
