--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Connexion</title>
-
+<!--doit renvoyer vers une page mon proofil/ creation></!-->
 
 </head>
 <body>
