--- a/src/main/resources/templates/view-profil-vendeur.html
+++ b/src/main/resources/templates/view-profil-vendeur.html
@@ -7,5 +7,24 @@
 </head>
 <body>
 
+<!-- a modifié mais dns l'idée cest sa
+<table>
+		
+		<thead>
+			<th>nom</th>
+			<th>prenom</th>
+			<th>email</th>
+			<th>action</th>
+		</thead>
+		
+		<tr th:each="f : ${formateurs}">
+			<td th:text="${f.nom}"></td>
+			<td th:text="${f.prenom}"></td>
+			<td th:text="${f.email}"></td>
+		</tr>
+		
+		
+	</table>  ></!-->
+
 </body>
 </html>
