--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,14 +12,14 @@
 </head>
 <body>
 	<a th:href="@{/login}" >S'inscrire - Se connecter</a>
-	
+	<div th:replace="~{fragments/fragment-entete :: frag-entete}"></div>
 	
 	<h1>ENI-Enchères</h1>
 	
 	
 	 <div>
         <h3>Filtres :</h3>
-        <form th:action="@{/}" method="POST" th:object="${articleVendus}">
+        <form th:action="@{/vendre-article}" method="POST" th:object="${articleVendus}">
             <label for="search">Le nom de l'article contient :</label>
             <input type="text" th:field="*{nomArticle}" id="search" name="search">
             
