MAJ fichier SecuriteConfig

--- a/src/main/resources/templates/mon-profil.html
+++ b/src/main/resources/templates/mon-profil.html
@@ -18,35 +18,35 @@
 		<table>
         	<tr>
             	<th>Pseudo</th>
-            	<td th:text="${utilisateur.pseudo}"></td>
+            	<td th:text="${utilisateurSession.pseudo}"></td>
         	</tr>
         	<tr>
             	<th>Nom</th>
-            	<td th:text="${utilisateur.nom}"></td>
+            	<td th:text="${utilisateurSession.nom}"></td>
         	</tr>
         	<tr>
             	<th>Prénom</th>
-            	<td th:text="${utilisateur.prenom}"></td>
+            	<td th:text="${utilisateurSession.prenom}"></td>
         	</tr>
         	<tr>
             	<th>Email</th>
-            	<td th:text="${utilisateur.email}"></td>
+            	<td th:text="${utilisateurSession.email}"></td>
         	</tr>
         	<tr>
             	<th>Téléphone</th>
-            	<td th:text="${utilisateur.telephone}"></td>
+            	<td th:text="${utilisateurSession.telephone}"></td>
         	</tr>
         	<tr>
             	<th>Rue</th>
-            	<td th:text="${utilisateur.rue}"></td>
+            	<td th:text="${utilisateurSession.rue}"></td>
         	</tr>
         	<tr>
             	<th>Code Postal</th>
-            	<td th:text="${utilisateur.codePostal}"></td>
+            	<td th:text="${utilisateurSession.codePostal}"></td>
         	</tr>
         	<tr>
             	<th>Ville</th>
-            	<td th:text="${utilisateur.ville}"></td>
+            	<td th:text="${utilisateurSession.ville}"></td>
         	</tr>
     	</table>
     	<a href="/mon-profil-detail">Modifier mon profil</a>
