--- a/src/main/resources/templates/mon-profil-creation.html
+++ b/src/main/resources/templates/mon-profil-creation.html
@@ -17,7 +17,7 @@
 		<h1>Mon profil Création</h1>
 	</section>
 	<section>
-		<form th:action="@{/mon-profil-creation}" th:object="${utilisateur}" method="post">
+		<form th:action="@{/creationUtilisateur}" th:object="${utilisateur}" method="post">
     		<label for="pseudo">Pseudo :</label>
     		<input type="text" id="pseudo" th:field="*{pseudo}" required ><br>
 
