--- a/src/main/resources/templates/view-acquereur.html
+++ b/src/main/resources/templates/view-acquereur.html
@@ -2,12 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" th:href="@{/css/general.css}" />
+<link rel="icon" th:href="@{/images/logoENI.png}" />
+<link rel="stylesheet" th:href="@{/css/majform.css}" />
 <!--affiche les detail de la vente et permettant d'y particper
 seras modifier si la vente est terminer devras afficher le resultat de la vente 
 + l'utilsateur qui aremporter l'enchere et si oui ou non c'est nous 
 affichage different en fonction de l'utilisteur ou membre vainqueur></!-->
 
-<title>Insert title here</title>
+<title>ENI-Enchères</title>
 </head>
 <body>
 	 <h1>ENI-Enchères</h1>
