Ajout différenciation profil vendeur et mon profil

--- a/src/main/resources/templates/fragments/fragment-entete.html
+++ b/src/main/resources/templates/fragments/fragment-entete.html
@@ -1,7 +1,7 @@
 <nav th:fragment="frag-entete">
 	
 	<a sec:authorize="isAuthenticated()" th:href="@{/}" >Accueil</a>
-	<a sec:authorize="isAuthenticated()" th:href="@{/mon-profil-detail}">mon profil</a>
+	<a sec:authorize="isAuthenticated()" th:href="@{/profil}">mon profil</a>
 	<a sec:authorize="isAuthenticated()" th:href="@{/vendre-article}">vendre un article</a>
 	<a sec:authorize="isAuthenticated()" th:href="@{/logout}">Deconexion</a>
 	
