--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Connexion</title>
-<!--doit renvoyer vers une page mon proofil/ creation></!-->
-<link rel="stylesheet" th:href="@{/css/general.css}" />
-<link rel="icon" th:href="@{/images/logoENI.png}" />
-<link rel="stylesheet" th:href="@{/css/majform.css}" />
+	<meta charset="UTF-8">
+	<title>Connexion</title>
+	<!--doit renvoyer vers une page mon proofil/ creation></!-->
+	<link rel="stylesheet" th:href="@{/css/general.css}" />
+	<link rel="icon" th:href="@{/images/logoENI.png}" />
+	<link rel="stylesheet" th:href="@{/css/majform.css}" />
 </head>
 <body>
-<form th:action="@{/login}" method="POST">
-	<ul>
-		<li>
-			<label for="">Email</label>
-			<input type="text" name="username"/>
-		</li>
-		<li>
-			<label for="">Mot de passe</label>
-			<input type="password" name="password" />
-		</li>
-		<li>
-			<button type="submit">Connexion</button>
-		</li>
-	</ul>
-
-
-</form>
+	<section>
+		<form th:action="@{/login}" method="POST">
+			<ul>
+				<li>
+					<label for="">Email</label>
+					<input type="text" name="username"/>
+				</li>
+				<li>
+					<label for="">Mot de passe</label>
+					<input type="password" name="password" />
+				</li>
+				<li>
+					<button type="submit">Connexion</button>
+				</li>
+			</ul>
+		</form>
+	</section>
+	<section>
+		<button type="button" onclick="window.location.href='/mon-profil-creation'">Créer un compte</button>
+	</section>
 </body>
 </html>
