--- a/src/main/resources/templates/mon-profil-creation.html
+++ b/src/main/resources/templates/mon-profil-creation.html
@@ -13,6 +13,7 @@
 	<h2>ENI-Enchères</h2>
 </header>
 <body>
+	<div th:replace="~{fragments/fragment-entete :: frag-entete}"></div>
 	<section>
 		<h1>Mon profil Création</h1>
 	</section>
