--- a/src/main/resources/templates/profil.html
+++ b/src/main/resources/templates/profil.html
@@ -11,12 +11,11 @@
 	<h2>ENI-Enchères</h2>
 </header>
 <body>
+	<div th:replace="~{fragments/fragment-entete :: frag-entete}"></div>
 	<section>
 		<h1>Profil</h1>
 	</section>
 	<section>
-	<!-- th:if="${session.user != null}" th:replace="~{fragments/fragment-entete :: frag-entete}" 
-		 A mettre dans le section pour n'afficher QUE si l'utilisateur est connecté -->
 		<table> 
 		   	<tr>
             	<th>Pseudo</th>
