--- a/src/main/resources/templates/mon-profil-creation.html
+++ b/src/main/resources/templates/mon-profil-creation.html
@@ -20,25 +20,32 @@
 	<section>
 		<form th:action="@{/creationUtilisateur}" th:object="${utilisateur}" method="post">
     		<label for="pseudo">Pseudo :</label>
-    		<input type="text" id="pseudo" th:field="*{pseudo}" required ><br>
+    		<input type="text" id="pseudo" th:field="*{pseudo}" required >
+    		<div th:if="${#fields.hasErrors('pseudo')}" th:errors="*{pseudo}"></div><br>
 
     		<label for="nom">Nom :</label>
-    		<input type="text" id="nom" th:field="*{nom}" required><br>
+    		<input type="text" id="nom" th:field="*{nom}" required>
+    		<div th:if="${#fields.hasErrors('nom')}" th:errors="*{nom}"></div><br>
 
     		<label for="prenom">Prénom :</label>
-    		<input type="text" id="prenom" th:field="*{prenom}" required><br>
+    		<input type="text" id="prenom" th:field="*{prenom}" required>
+    		<div th:if="${#fields.hasErrors('prenom')}" th:errors="*{prenom}"></div><br>
 
     		<label for="email">Email :</label>
-    		<input type="email" id="email" th:field="*{email}" required><br>
+    		<input type="email" id="email" th:field="*{email}" required>
+    		<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div><br>
 
     		<label for="telephone">Téléphone :</label>
-    		<input type="tel" id="telephone" th:field="*{telephone}" required><br>
+    		<input type="tel" id="telephone" th:field="*{telephone}" required>
+    		<div th:if="${#fields.hasErrors('telephone')}" th:errors="*{telephone}"></div><br>
 
     		<label for="rue">Rue :</label>
-    		<input type="text" id="rue" th:field="*{rue}" required><br>
+    		<input type="text" id="rue" th:field="*{rue}" required>
+    		<br>
 
     		<label for="codePostal">Code Postal :</label>
-    		<input type="text" id="codePostal" th:field="*{codePostal}" required><br>
+    		<input type="text" id="codePostal" th:field="*{codePostal}" required>
+    		<div th:if="${#fields.hasErrors('codePostal')}" th:errors="*{codePostal}"></div><br>
 
     		<label for="ville">Ville :</label>
     		<input type="text" id="ville" th:field="*{ville}" required><br>
