--- a/src/main/resources/templates/mon-profil-detail.html
+++ b/src/main/resources/templates/mon-profil-detail.html
@@ -9,30 +9,36 @@
 <body>
 	<div th:replace="~{fragments/fragment-entete :: frag-entete}"></div>
 	<section>
-		<form th:action="@{/mon-profil-detail}" th:object="${utilisateur}" method="post">
+		<form th:action="@{/modificationProfil}" th:object="${utilisateurSession}" method="post">
 			<label for="pseudo">Pseudo :</label>
-    		<input type="text" id="pseudo" th:field="*{pseudo}" value="${utilisateurSession.pseudo}" required ><br>
+    		<input type="text" id="pseudo" th:field="*{pseudo}" th:value="${utilisateurSession.pseudo}" required >
+    		<div th:if="${#fields.hasErrors('pseudo')}" th:errors="*{pseudo}"></div><br>
 
     		<label for="nom">Nom :</label>
-    		<input type="text" id="nom" th:field="*{nom}" value="${utilisateurSession.nom}" required><br>
+    		<input type="text" id="nom" th:field="*{nom}" th:value="${utilisateurSession.nom}" required>
+    		<div th:if="${#fields.hasErrors('nom')}" th:errors="*{nom}"></div><br>
 
     		<label for="prenom">Prénom :</label>
-    		<input type="text" id="prenom" th:field="*{prenom}" value="${utilisateurSession.prenom}" required><br>
+    		<input type="text" id="prenom" th:field="*{prenom}" th:value="${utilisateurSession.prenom}" required>
+    		<div th:if="${#fields.hasErrors('prenom')}" th:errors="*{prenom}"></div><br>
 
     		<label for="email">Email :</label>
-    		<input type="email" id="email" th:field="*{email}" value="${utilisateurSession.email}" required><br>
+    		<input type="email" id="email" th:field="*{email}" th:value="${utilisateurSession.email}" required>
+    		<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div><br>
 
     		<label for="telephone">Téléphone :</label>
-    		<input type="tel" id="telephone" th:field="*{telephone}" value="${utilisateurSession.telephone}" required><br>
+    		<input type="tel" id="telephone" th:field="*{telephone}" th:value="${utilisateurSession.telephone}" required>
+    		<div th:if="${#fields.hasErrors('telephone')}" th:errors="*{telephone}"></div><br>
 
     		<label for="rue">Rue :</label>
-    		<input type="text" id="rue" th:field="*{rue}" value="${utilisateurSession.rue}" required><br>
+    		<input type="text" id="rue" th:field="*{rue}" th:value="${utilisateurSession.rue}" required><br>
 
     		<label for="codePostal">Code Postal :</label>
-    		<input type="text" id="codePostal" th:field="*{codePostal}" value="${utilisateurSession.codePostal}" required><br>
+    		<input type="text" id="codePostal" th:field="*{codePostal}" th:value="${utilisateurSession.codePostal}" required>
+    		<div th:if="${#fields.hasErrors('codePostal')}" th:errors="*{codePostal}"></div><br>
 
     		<label for="ville">Ville :</label>
-    		<input type="text" id="ville" th:field="*{ville}" value="${utilisateurSession.ville}" required><br>
+    		<input type="text" id="ville" th:field="*{ville}" th:value="${utilisateurSession.ville}" required><br>
 			
 			<!-- 
 				<label for="motDePasse">Mot de Passe actuel :</label>
@@ -51,7 +57,7 @@
     		
     	</form>
     	<form th:action="@{/deleteUtilisateur}" method="post">
-    		<input type ="hidden" th:value="${utilisateur.email}" name="email">
+    		<input type ="hidden" th:value="${utilisateurSession.email}" name="email">
     		<button type="submit">Supprimer mon compte</button>
     	</form>
 	</section>
