--- a/src/main/resources/templates/profil.html
+++ b/src/main/resources/templates/profil.html
@@ -58,7 +58,9 @@
             				 utilisateurVendeur.ville : utilisateurSession.ville}"></td>
         	</tr>
     	</table>
-    	<button th:if="${utilisateurVendeur != null ? utilisateurVendeur.ville : utilisateurSession.ville}"type="button" onclick="window.location.href='/mon-profil-detail'">Modifier mon compte</button>
+    	<!-- <button th:if="${utilisateurVendeur = null ?" 
+    	type="button" onclick="window.location.href='/mon-profil-detail'">Modifier mon compte</button> -->
+    	
 	</section>
 </body>
 </html>
