--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -5,77 +5,43 @@
 /*   display: flex; */
 /*   justify-content: space-between; */
 /* } */
-* {
-	margin: 0;
-	padding: 0;
-	font-family: 'Arial', sans-serif;
-	box-sizing: border-box;
+body {
+    background: linear-gradient(to bottom, #002b36, #073642);
+    color: #ffffff;
+    font-family: Arial, sans-serif;
 }
 
-/* Header */
-header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 20px 50px;
-	background-color: gray;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+/* Titres */
+h1, h2 {
+    color: #00bcd4;
 }
 
-#nav-title {
-	font-size: 1.5em;
-	font-weight: bold;
-	color: #007bff;
+/* Liens */
+a {
+    color: #a1ecff;
+    text-decoration: none;
 }
 
-header ul {
-	list-style: none;
-	display: flex;
+a:hover {
+    text-decoration: underline;
 }
 
-header li {
-	display: inline-block;
-	padding: 0 20px;
+/* Bordures des cartes */
+.card {
+    background-color: #073642;
+    border: 1px solid #00bcd4;
+    color: #ffffff;
 }
 
-header a {
-	text-decoration: none;
-	color: white;
-	transition: color 0.3s ease;
+/* Boutons */
+button {
+    background-color: #00bcd4;
+    color: #ffffff;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
 }
 
-header a:hover {
-	color: #ff8c00;
-}
-
-main {
-	margin: 20px;
-	padding: 20px;
-	background-color: rgb(128, 128, 128);
-	border-radius: 8px;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-main h1 {
-	margin-bottom: 20px;
-	color: #333333;
-}
-
-.center-main {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 300px;
-}
-
-.center-section {
-	text-align: center;
-}
-
-footer {
-	background-color: #ff8c00;
-	padding: 20px;
-	text-align: center;
-	color: #ffffff;
-	box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+button:hover {
+    background-color: #008c9e;
 }
