--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,9 +6,10 @@
 	<!--doit renvoyer vers une page mon proofil/ creation></!-->
 	<link rel="stylesheet" th:href="@{/css/general.css}" />
 	<link rel="icon" th:href="@{/images/logoENI.png}" />
-	<link rel="stylesheet" th:href="@{/css/majform.css}" />
+	<link rel="stylesheet" th:href="@{/css/tp-form.css}" />
 </head>
 <body>
+<div th:replace="~{fragments/fragment-lien-titre :: frag-titre}"></div>
 	<section>
 		<form th:action="@{/login}" method="POST">
 			<ul>
