--- a/src/main/resources/templates/profil.html
+++ b/src/main/resources/templates/profil.html
@@ -2,16 +2,19 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" th:href="@{/css/general.css}" />
+	<link rel="icon" th:href="@{/images/logoENI.png}" />
+	<link rel="stylesheet" th:href="@{/css/NewFile.css}" />
 	<!--affiche la page pour modifier le profil une fois connecter
 	</!-->
 
 	<title>ENI Enchères - mon profil</title>
 </head>
 <header>
-	<h2>ENI-Enchères</h2>
+	
 </header>
 <body>
-	<div th:replace="~{fragments/fragment-entete :: frag-entete}"></div>
+	<div th:replace="~{fragments/fragment-lien-titre :: frag-titre}"></div>
 	<section>
 		<h1>Profil</h1>
 	</section>
